// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders size 'lg' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnLg btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders size 'sm' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnSm btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders variant 'danger' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnDanger btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders variant 'info' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnInfo btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders variant 'link' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnLink btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders variant 'merged' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnMerged btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders variant 'primary' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnPrimary btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders variant 'secondary' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnSecondary btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders variant 'success' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnSuccess btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button Renders variant 'warning' correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnWarning btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button renders a simple button correctly 1`] = `
<DocumentFragment>
  <button
    class="btn btnInline"
    type="button"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`Button supports rendering as different elements 1`] = `
<DocumentFragment>
  <a
    class="btn btnInline"
  >
    I am a link
  </a>
</DocumentFragment>
`;
